# cookmarks

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml  publish.yml
core/: admin.py  epub.py  forms.py  models.py  tasks.py  urls.py  views.py
core/management/commands/: backfill_embeddings.py  count_recipe_tokens.py  recalculate_extraction_costs.py  run_eval.py
core/migrations/: 0001_initial.py  0002_add_recipelist_is_default.py  0002_book_calibre_added_at.py  0003_add_langgraph_fields.py  0004_enable_wal_mode.py
core/services/: ai.py  calibre.py  embeddings.py  epub.py  extract.py  prompts.py  rate_limiter.py  recipe_schema.json
core/services/extraction/: __init__.py  graph.py  state.py  utils.py
core/templates/core/: _recipe_content.html  _recipe_image.html  base.html  book_detail.html  books.html  books_grid.html  config.html  extraction_reports.html  home.html  recipe_detail.html  recipe_detail_content.html  recipe_list_detail.html  recipe_lists.html  recipes.html  search.html  tasks.html
core/templates/core/partials/: favourite_button.html  similar_recipes.html
core/templatetags/: query_params.py
core/tests/: conftest.py  test_e2e.py  test_integration.py
core/tests/services/: test_calibre.py  test_embeddings.py  test_extract.py  test_extraction_graph.py  test_recipes.py  test_search.py
project/: settings.py  urls.py
