[project]
name = "cookmarks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django-json-widget>=2.1.1",
    "django-q2>=1.6.1",
    "django>=5.2.8",
    "google-genai>=1.3.0",
    "gunicorn>=22.0.0",
    "inflect>=7.5.0",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph>=0.3.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.12.0",
    "titlecase>=2.4.1",
    "whitenoise>=6.7.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "pytest>=9.0.1",
    "responses>=0.25.8",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".idea",
    ".vscode",
    ".pytest_cache",
    "__pycache__",
    "migrations",
    "staticfiles",
    ".cache",
    "_eval",
    "_books",
    "_test_calibre",
    "build",
    "dist",
    "wheels",
    "*.egg-info",
    "core/services/prompts.py",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "DJ001",  # Avoid using null=True on string-based fields (sometimes needed)
    "RUF012", # Mutable class attributes, clashes with Django
    "SIM108"  # Use ternary operator instead of if-else-block
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["T20"]

# Allow unused imports and variables in __init__.py files
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["core", "project"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
